--- a/jmsproject/pom.xml
+++ b/jmsproject/pom.xml
@@ -19,7 +19,13 @@
   </properties>
 
 
-
+<dependencies>
+  <dependency>
+    <groupId>javax.jms</groupId>
+    <artifactId>javax.jms-api</artifactId>
+    <version>2.0.1</version>
+  </dependency>
+</dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
