Debugging funcional Co-authored-by: Alejandro Ayuso Exposito <AlexAyuso01@users.noreply.github.com> pom.xml troubleshooting Co-authored-by: piinduu <piinduu@users.noreply.github.com> Setting up the project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,15 +11,10 @@
             "mainClass": "com.jmsproject.Delegacion",
             "projectName": "distrito",
             "env": {
-                "MQ_HOME": "/path/to/openmq-<version>",
-                "PATH": "${env:PATH}:${env:MQ_HOME}/bin"
-            }
+                "IMQ_HOME": "/home/hernie/Documents/Middleware/JMS/lib/bin",
+            },
+            "preLaunchTask": "Build and Launch"
         },
-        {
-            "type": "java",
-            "name": "Oficinas",
-            "request": "launch",
-            "mainClass": "",
-        }
+
     ]
 }
