--- a/jmsproject/pom.xml
+++ b/jmsproject/pom.xml
@@ -25,6 +25,11 @@
     <artifactId>javax.jms-api</artifactId>
     <version>2.0.1</version>
   </dependency>
+  <dependency>
+      <groupId>com.sun.messaging.mq</groupId>
+      <artifactId>imq</artifactId>
+      <version>4.5-b13</version>
+  </dependency>
 </dependencies>
 
   <build>
