--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,33 @@
             "type": "java",
             "name": "Delegacion",
             "request": "launch",
-            "mainClass": "com.jmsproject.Delegacion",
+            "mainClass": "com.jmsproject.Delegaciones",
+            "projectName": "distrito",
+            "env": {
+                "IMQ_HOME": "/home/hernie/Documents/Middleware/JMS/lib/bin",
+                
+            },
+            "sourcePaths": [
+                "${workspaceFolder}/jmsproject/src/main/java/com/jmsproject"
+            ],
+            "modulePaths": [
+                "${workspaceFolder}/jmsproject/src/main/java/com/jmsproject"
+            ],
+            "classPaths": [
+                "${workspaceFolder}/jmsproject/src/main/java/com/jmsproject"
+            ],
+            "preLaunchTask": "Build and Launch"
+        },
+        {
+            "type": "java",
+            "name": "Oficina",
+            "request": "launch",
+            "mainClass": "com.jmsproject.Oficina",
             "projectName": "distrito",
             "env": {
                 "IMQ_HOME": "/home/hernie/Documents/Middleware/JMS/lib/bin",
             },
             "preLaunchTask": "Build and Launch"
         },
-
     ]
 }
